# splat-studio

./: .gitignore  LICENSE  README.md
.github/workflows/: ci.yml
capture/: .gitignore  README.md  app.json  package.json  tailwind.config.js
capture/app/: _layout.tsx  capture.tsx
capture/app/(tabs)/: _layout.tsx  index.tsx  settings.tsx
capture/app/scene/: [id].tsx
capture/lib/: api.ts  store.ts  types.ts
docs/: CAPTURE.md  DFD.md  PLAN.md  PRD.md  RESEARCH.md  RFC.md  THINK.md  USECASES.md
training/: pyproject.toml
training/splat_studio/: __init__.py  __main__.py
training/tests/: test_smoke.py
viewer/: package.json
viewer/src/app/: page.tsx
viewer/src/components/: scenes.json
