[project]
name = "splat-studio"
version = "0.1.0"
description = "Gaussian Splatting training pipeline — video -> .ksplat"
authors = [{ name = "Rushil Kaul", email = "theruka007@outlook.com" }]
readme = "../README.md"
license = { text = "MIT" }
requires-python = ">=3.13"

dependencies = [
    "numpy>=2.1",
    "pillow>=11.0",
    "typer>=0.13",
    "rich>=13.9",
    "pydantic>=2.9",
    "ffmpeg-python>=0.2",
    "tqdm>=4.67",
]

[project.optional-dependencies]
gpu = [
    # Installed separately on CUDA machines — not hard deps to keep lockfile portable:
    # nerfstudio, gsplat, torch
]
dev = [
    "ruff>=0.8",
    "mypy>=1.13",
    "pytest>=8.3",
]

[project.scripts]
splat-train = "splat_studio.__main__:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["splat_studio"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.mypy]
python_version = "3.13"
strict = true
